--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+    font-family: Antonio;
+    src: local(Antonio) url("/assets/font/Antonio/static/Antonio-Medium.ttf") format("ttf");
+}
+
 :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
@@ -24,6 +29,19 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+}
+h1 {
+    font-family: Antonio;
+}
+p {
+    font-size: 12px;
+    opacity: 0.5;
+}
+h3 {
+
+}
+h4 {
+
 }
 
 @layer utilities {
