--- a/app/globals.css
+++ b/app/globals.css
@@ -4,7 +4,15 @@
 
 @font-face {
     font-family: Antonio;
-    src: local(Antonio) url("/assets/font/Antonio/static/Antonio-Medium.ttf") format("ttf");
+    src: url("/assets/font/Antonio/static/Antonio-Medium.ttf") format("truetype");
+}
+@font-face {
+    font-family: Spartan;
+    src: url("/assets/font/League_Spartan/static/LeagueSpartan-Bold.ttf") format("truetype");
+}
+@font-face {
+    font-family: SpartanRegular;
+    src: url("/assets/font/League_Spartan/static/LeagueSpartan-Regular.ttf") format("truetype");
 }
 
 :root {
@@ -23,25 +31,31 @@
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background: #070724;
+
+    background-image: url('/assets/background-stars.svg');
+    background-size: cover;
+    background-repeat: no-repeat; 
+    background-attachment: fixed; 
 }
 h1 {
     font-family: Antonio;
+}
+h2 {
+    font-family: Antonio;
+}
+h3 {
+    font-family: Spartan;
+}
+h4 {
+    font-family: SpartanRegular;
 }
 p {
     font-size: 12px;
     opacity: 0.5;
 }
-h3 {
-
-}
-h4 {
-
+button:hover {
+    background-color: rgba(216, 216, 216, 0.2);
 }
 
 @layer utilities {
