--- a/app/globals.css
+++ b/app/globals.css
@@ -17,22 +17,9 @@
     src: url("/assets/font/League_Spartan/static/LeagueSpartan-Regular.ttf") format("truetype");
 }
 
-:root {
-    --foreground-rgb: 0, 0, 0;
-    --background-start-rgb: 214, 219, 220;
-    --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-    :root {
-        --foreground-rgb: 255, 255, 255;
-        --background-start-rgb: 0, 0, 0;
-        --background-end-rgb: 0, 0, 0;
-    }
-}
 
 body {
-    color: rgb(var(--foreground-rgb));
+    color: #fff;
     background: #070724;
 
     background-image: url('/assets/background-stars.svg');
